# zvanicni-materijali

./: .gitignore  README.md
01-uvod-u-cpp/: README.md
01-uvod-u-cpp/01-average/: Makefile  main.cpp
01-uvod-u-cpp/02-stars/: Makefile  main.cpp
01-uvod-u-cpp/03-kolekcije/: Makefile  main.cpp
02-oop/01-fraction/: Fraction.cpp  Fraction.drawio  Fraction.hpp  Makefile  main.cpp
02-oop/02-iterators/: Makefile  main.cpp
02-oop/03-calculator/: Fraction.cpp
03-dinamicka-memorija/01-sharedptr/: Makefile  main.cpp
03-dinamicka-memorija/02-uniqueptr/: Makefile  main.cpp
03-dinamicka-memorija/03-linkedlist/: Makefile  list.cpp  list.hpp  main.cpp
03-dinamicka-memorija/04-raii/: Makefile  data.txt  main.cpp
04-genericke-klase-funkcije/01_generic_functions/: Makefile  main.cpp  point.hpp
04-genericke-klase-funkcije/02_generic_list/: Makefile  list.hpp  main.cpp
04-genericke-klase-funkcije/03_matf_pair/: Makefile  color.h  main.cpp  pair.hpp
05-algoritmi-stl/01_palindrome/: Makefile  main.cpp
05-algoritmi-stl/02_transform/: Makefile  main.cpp
05-algoritmi-stl/03_accumulate/: Makefile  main.cpp
05-algoritmi-stl/04_split/: Makefile  main.cpp
05-algoritmi-stl/05_partitions/: Makefile  main.cpp
05-algoritmi-stl/06_cont_selection_move/: Makefile  main.cpp
05-algoritmi-stl/07_arb_selection_move/: Makefile  main.cpp
05-algoritmi-stl/08_count_adj_equals/: Makefile  main.cpp
05-algoritmi-stl/09_is_sorted/: Makefile  main.cpp
08-qt-graficka-scena-cpp-testovi/03_ceo_broj_optional/: CMakeLists.txt  ceo_broj.cpp  ceo_broj.h  ceo_broj_test.cpp
(+77 files in other folders)
